TestRepo2/src/objects/SelectValues__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>ParentSelectName__c</fullName>
        <label>Parent Select Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentSelectvalue__c</fullName>
        <label>Parent Select value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectName__c</fullName>
        <description>Select name</description>
        <label>Select Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectSubValue__c</fullName>
        <label>Select sub value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SelectValue__c</fullName>
        <description>Option (value &amp; label)</description>
        <label>Select value</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Select values</label>
</CustomObject>